Rewardを追加
